--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "dist/parser.js",
   "types": "dist/parser.d.ts",
   "scripts": {
+    "demo": "tsc && node dist/demo.js testfile5.pb",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap",
+    "test:update": "tap --snapshot"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +18,9 @@
     "@eslint/js": "^9.31.0",
     "@stylistic/eslint-plugin": "^5.1.0",
     "@types/node": "^24.0.13",
+    "@types/tap": "^15.0.12",
     "eslint": "^9.31.0",
+    "tap": "^21.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0"
