--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
 		"sourceMap": true,
 		"declaration": true,
 	},
-	"include": ["src/parser.ts"]
+	"include": ["src/parser.ts", "src/demo.ts", "test/**/*.ts"]
 }
