--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"types": ["node"],
 		"sourceMap": true,
 		"declaration": true,
+		"skipLibCheck": true,
 	},
 	"include": ["src/parser.ts", "src/demo.ts", "test/**/*.ts"]
 }
