--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "pbtxtjs",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "description": "Parser for the protobuf text format",
   "main": "dist/src/parser.js",
   "types": "dist/src/parser.d.ts",
-  "files": ["dist/src"],
+  "files": [
+    "dist/src"
+  ],
   "scripts": {
     "demo": "tsc && node dist/src/demo.js testfile5.pb",
     "build": "tsc",
@@ -27,6 +29,6 @@
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
-    "protobufjs": "^7.5.3"
+    "protobufjs": "^8.0.0"
   }
 }
